--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
